src/styles/Contact.css
#contactSection {
  background-color: hsl(240, 18%, 7%);
  position: relative;
  display: flex;
  flex-direction: column;
  height: calc(100vh - 20vw);
  max-height: 1100px;
  align-items: center;
  z-index: 10;
  scroll-margin-top: 18vw;
  justify-content: space-around;
}

#contactHeader {
  color: white;
}

#contactSection p.contactParagraph {
  text-shadow: 3px 3px 5px black;
  font-size: 15vw;
  margin-bottom: 0;
}

#contactHeader p.contactSecondParagraph {
  display: none;
  }

#contactSection p {
  margin: 0;
  color: white;
}

#contactHeader p {
  text-align: center;
  color: white;
  font-size: 7vw;
  margin-bottom: 5vh;
}


#contactMain {
  display: flex;
  flex-direction: column ;
  align-items: center;
  width: 100%;
  justify-content: space-around;
}

#contactMain p {
  font-size: 7vw;
}

#contactMain img {
  /* background-color: white; */
  width: calc(13vh - 1rem);
  margin-bottom: 5vh;
  cursor: pointer;
}

#contactMain a {
  font-size: 0;
}

#githubImg  {
  border-radius: 50%;
}

#contactMain .githubBG #githubImg {
  margin-bottom: 0;
}

/* .githubBG {
  display: flex;
  place-content: center;
  border-radius: 2vw;
  background-color: whitesmoke;
  box-shadow: 0px 10px 20px  black;
  transition: .1s;
  margin-bottom: 5vh;
  padding: 1rem;
} */

#githubImg {
  padding: 1rem;
}
.githubBG {
  display: flex;
  place-content: center;
  border-radius: 30px;
  /* background-color: #808080; */
  background-color: whitesmoke;
  box-shadow: 0px 10px 20px  black;
  margin-bottom: 5vh;
  cursor: pointer;
}

#contactMain #linkedinImg {
  border-radius: 30px;
  background-color: whitesmoke;
  box-shadow: 0px 10px 20px black;
  width: calc(13vh + 1rem);
}

#gmailImg:active, .githubBG:active, #contactMain #linkedinImg:active { 
  translate: 0px 5px;
  box-shadow: none;
  transition: .1s;
}

#gmailImg{
  padding: 1rem;
  border-radius: 30px;
  /* background-color: rgba(0, 0, 0, 0.960); */
  background-color: whitesmoke;
  box-shadow: 0px 10px 20px black;
}


#contactFooter {
  display: flex;
  width: 100%;
  display: flex;
  justify-content: center;
  gap: 10vw;
  color: white;
  font-size: 3vw;
}

#contactFooter img {
  color: white;
  width: 5vw;
}

#contactFooter div {
  display: flex;
  align-items: center;
  justify-content: space-around;
}

#phone {
  white-space: nowrap;
}

@media (min-width:800px) {

  #contactSection {
    justify-content: space-between;
    height: calc(100vh - 3rem);
    padding-top: 0;
    max-height: none;
    scroll-margin-top: 3rem;
  }

  /* #contactSection p .contactParagraph {
    font-size: 4rem;
  } */

  #contactHeader {
    align-self: flex-start;
  }
/* #contactHeader p.contactSecondParagraph {
  font-size: 4vw;
  margin-top: 1vw;
  } */

  #contactHeader p.contactSecondParagraph {
    display: block;
    margin: 0;
    padding-top: 6vh;
    padding-left: 2vw;
    font-size: 4rem;
  }

  /* #contactHeader p.contactParagraph {
    margin: 0;
    padding-top: 6vh;
    padding-left: 2vw;
    font-size: 4rem;
  } */

  #contactHeader .contactParagraph {
    display: none;
  }

  #contactMain {
    flex-direction: row;
    justify-content: space-evenly;
  }

  #contactMain img {
    width: min(18vw, 300px);
    margin-bottom: 0;
  }

  #contactMain #linkedinImg {
    width: min(calc(18vw + 2rem), calc(300px + 2rem));
  }

  #contactMain .githubBG{
    width: min(calc(18vw + 2rem),calc(300px + 2rem));
    margin-bottom: 0;
  }

  #gmailImg:hover, .githubBG:hover, #contactMain #linkedinImg:hover { 
    border: solid 8px #1B4DFF;
    border-radius: 38px;
    margin: -8px;
    transition: border-color .2s;
  }

  #contactMain #linkedinImg:hover { 
    box-shadow: inset 0 0px 20px 20px #1B4DFF,  0px 10px 20px  black;
  }

  #gmailImg:active, .githubBG:active, #contactMain #linkedinImg:active { 
    translate: 0px 5px;
    box-shadow: none;
    transition: .1s;
  }

  #contactFooter {
    position: initial;
    display: flex;
    width: 100%;
    display: flex;
    justify-content: center;
    gap: 10vw;
    color: white;
    font-size: 2rem;
  }

  #contactFooter {
    margin-bottom: 4vh;
  }

  #contactFooter img {
    width: 3rem;
  }
}

